# CamerasAcquisition

./: .gitmodules  CMakeLists.txt
cmake/: config-win-installer.cmake
config/: config.h.in
config/installer/config/: config.xml.in
src/: main.cpp  webcamimageprovider.cpp  webcamimageprovider.hpp
ui/qml/: Main.qml
